--- a/client/src/Chat/ChatBlock.css
+++ b/client/src/Chat/ChatBlock.css
@@ -1,10 +1,13 @@
 .card-cc {
     margin: 0 10px 0 0;
     width: 420px;
-    background-color: #fff;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    /*background-color: #0F172A;*/
+    /*box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);*/
+
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
+    background: rgba(15, 23, 42, 0.5);
+    /*opacity: 0.5;*/
 }
 
 .chats-header {
@@ -14,10 +17,17 @@
     font-size: 18px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    /*opacity: 1;*/
+    /*filter: alpha(opacity=50);*/
 }
 
+/*.chats-body{*/
+/*    opacity: 0.5;*/
+/*    background-color: rgba(255, 255, 255, 1);*/
+/*}*/
+
 .chats-window {
-    height: 480px;
+    height: 100%;
 }
 
 .chats-list {
