--- a/client/src/Chat/ChatRoom.css
+++ b/client/src/Chat/ChatRoom.css
@@ -1,10 +1,11 @@
 .card {
     margin: 0 auto;
     width: 640px;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    /*background-color: #fff;*/
+    /*border: 1px solid #ccc;*/
     border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);
+    background: rgba(15, 23, 42, 0.5);
 }
 
 .chat-header {
@@ -32,6 +33,8 @@
     align-items: center;
     padding: 10px;
     border-top: 1px solid #ccc;
+    /*box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);*/
+    /*background: rgba(15, 23, 42, 0.5);*/
 }
 
 .message-input {
@@ -40,6 +43,9 @@
     outline: none;
     padding: 5px;
     font-size: 14px;
+    /*box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5);*/
+    background: rgba(15, 23, 42, 0.5);
+    opacity: 0.5;
 }
 
 .send-button {
