--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,70 +1,138 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@import "tailwindcss";
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  background: #386CDD;
-  background: radial-gradient(circle, rgba(56, 108, 221, 1) 0%, rgba(29, 78, 184, 1) 66%, rgba(21, 56, 133, 1) 100%);
+    @apply text-white min-h-screen;
+    /*background: #386CDD;*/
+    background: radial-gradient(circle, rgba(56, 108, 221, 1) 0%, rgba(29, 78, 184, 1) 66%, rgba(21, 56, 133, 1) 100%);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@layer utilities {
+    /*bg-chat-base  СТАРА НАЗВА */
+    .bg-blue-base {
+        background-color: #1E75BC;
+    }
+
+    /* Використовується в SidebarRight -> Settings*/
+    .text-blue-base {
+        color: #1E75BC;
+    }
+
+    .bg-chat-active {
+        background-color: #60A5FA;
+    }
+
+    .bg-blue-avatar{
+        background-color: #5693C4;
+    }
+
+    .shadow-chat {
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    }
+
+    .rounded-22 {
+        border-radius: 22px;
+    }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Глобальній стиль скролбару */
+::-webkit-scrollbar {
+    width: 8px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+::-webkit-scrollbar-track {
+    background: transparent;
 }
+
+::-webkit-scrollbar-thumb {
+    /*background-color: rgba(255, 255, 255, 0.2); !* Напівпрозорий білий *!*/
+    background: radial-gradient(
+            circle,
+            rgba(56, 108, 221, 1) 0%,
+            rgba(29, 57, 184, 1) 50%,
+            rgba(56, 108, 221, 1) 100%
+    );
+    border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: radial-gradient(
+            circle,
+            rgba(96, 165, 250, 1) 0%,
+            rgba(37, 99, 235, 1) 50%,
+            rgba(96, 165, 250, 1) 100%
+    );
+}
+
+/*:root {*/
+/*  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;*/
+/*  line-height: 1.5;*/
+/*  font-weight: 400;*/
+
+/*  color-scheme: light dark;*/
+/*  color: rgba(255, 255, 255, 0.87);*/
+/*  background-color: #242424;*/
+
+/*  font-synthesis: none;*/
+/*  text-rendering: optimizeLegibility;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+
+/*a {*/
+/*  font-weight: 500;*/
+/*  color: #646cff;*/
+/*  text-decoration: inherit;*/
+/*}*/
+/*a:hover {*/
+/*  color: #535bf2;*/
+/*}*/
+
+/*body {*/
+/*  margin: 0;*/
+/*  display: flex;*/
+/*  place-items: center;*/
+/*  min-width: 320px;*/
+/*  min-height: 100vh;*/
+/*  background: #386CDD;*/
+/*  background: radial-gradient(circle, rgba(56, 108, 221, 1) 0%, rgba(29, 78, 184, 1) 66%, rgba(21, 56, 133, 1) 100%);*/
+/*}*/
+
+/*h1 {*/
+/*  font-size: 3.2em;*/
+/*  line-height: 1.1;*/
+/*}*/
+
+/*button {*/
+/*  border-radius: 8px;*/
+/*  border: 1px solid transparent;*/
+/*  padding: 0.6em 1.2em;*/
+/*  font-size: 1em;*/
+/*  font-weight: 500;*/
+/*  font-family: inherit;*/
+/*  background-color: #1a1a1a;*/
+/*  cursor: pointer;*/
+/*  transition: border-color 0.25s;*/
+/*}*/
+/*button:hover {*/
+/*  border-color: #646cff;*/
+/*}*/
+/*button:focus,*/
+/*button:focus-visible {*/
+/*  outline: 4px auto -webkit-focus-ring-color;*/
+/*}*/
+
+/*@media (prefers-color-scheme: light) {*/
+/*  :root {*/
+/*    color: #213547;*/
+/*    background-color: #ffffff;*/
+/*  }*/
+/*  a:hover {*/
+/*    color: #747bff;*/
+/*  }*/
+/*  button {*/
+/*    background-color: #f9f9f9;*/
+/*  }*/
+/*}*/
