--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,84 @@
 @import "tailwindcss";
 
-body {
-    @apply text-white min-h-screen;
-    background: radial-gradient(circle, rgb(58, 114, 235) 10%, rgb(16, 60, 155) 66%, rgb(4, 35, 100) 100%);
+@layer base {
+    body {
+        @apply text-black;
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 10%, rgba(219, 234, 254, 1) 66%, rgba(186, 230, 253, 1) 100%);
+    }
+
+    .dark body {
+        @apply text-white;
+        background: radial-gradient(circle, rgb(58, 114, 235) 10%, rgb(16, 60, 155) 66%, rgb(4, 35, 100) 100%);
+    }
 }
 
 @layer utilities {
     .bg-blue-base {
-        background-color: #1E75BC;
+        @apply bg-[#63B3ED];
+    }
+    .dark .bg-blue-base {
+        @apply bg-[#1E75BC];
     }
 
     .bg-chat-active {
-        background-color: #60A5FA;
+        @apply bg-[#60A5FA];
+    }
+    .dark .bg-chat-active {
+        @apply bg-[#3B82F6];
     }
 
-    .bg-blue-avatar{
-        background-color: #5693C4;
+    .bg-chat-inactive {
+        @apply bg-[#D1D5E0];
+    }
+    .dark .bg-chat-inactive {
+        @apply bg-[#1E75BC];
+    }
+
+    .text-chat-subtitle {
+        @apply text-black/50;
+    }
+    .dark .text-chat-subtitle {
+        @apply text-[#D1D5DC];
+    }
+
+    .bg-container {
+        @apply bg-[#DBEAFE]/50;
+    }
+    .dark .bg-container {
+        @apply bg-[#0F172A]/50;
+    }
+
+    .bg-input {
+        @apply bg-[#D1D5E0];
+    }
+    .dark .bg-input {
+        @apply bg-[#1E75BC];
+    }
+
+    .placeholder-input::placeholder {
+        color: #1B212A;
+    }
+
+    .dark .placeholder-input::placeholder {
+        color: white;
+    }
+
+    .bg-tab {
+        @apply bg-[#D1D5E0];
+    }
+    .dark .bg-tab {
+        @apply bg-[#1E75BC];
+    }
+
+    .bg-tab-active {
+        @apply bg-[#63B3ED];
+    }
+    .dark .bg-tab-active {
+        @apply bg-black;
+    }
+
+    .bg-blue-avatar {
+        @apply bg-[#5693C4];
     }
 
     .text-blue-base {
@@ -43,7 +106,7 @@ body {
     background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
+body.dark ::-webkit-scrollbar-thumb {
     background: radial-gradient(
             circle,
             rgba(56, 108, 221, 1) 0%,
@@ -53,11 +116,29 @@ body {
     border-radius: 100vh;
 }
 
-::-webkit-scrollbar-thumb:hover {
+body.dark ::-webkit-scrollbar-thumb:hover {
     background: radial-gradient(
             circle,
             rgba(96, 165, 250, 1) 0%,
             rgba(37, 99, 235, 1) 50%,
             rgba(96, 165, 250, 1) 100%
+    );
+}
+
+body:not(.dark) ::-webkit-scrollbar-thumb {
+    background: radial-gradient(
+            circle,
+            rgba(219, 234, 254, 1) 0%,
+            rgba(186, 230, 253, 1) 50%,
+            rgba(219, 234, 254, 1) 100%);
+    border-radius: 100vh;
+}
+
+body:not(.dark) ::-webkit-scrollbar-thumb:hover {
+    background: radial-gradient(
+            circle,
+            rgba(147, 197, 253, 1) 10%,
+            rgba(125, 211, 252, 1) 66%,
+            rgba(147, 197, 253, 1) 100%
     );
 }
